// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toMatchJSON throws on invalid JSON 1`] = `
expect(string).toMatchJSON(expected)

string value must be a string.
Received: null
`;

exports[`toMatchJSON throws on invalid JSON 2`] = `
expect(string).toMatchJSON(expected)

string value must be a valid JSON.
Received:
  ""
`;

exports[`toMatchJSON throws on invalid JSON 3`] = `
expect(string).toMatchJSON(expected)

string value must be a valid JSON.
Received:
  "fals"
       ^
Unexpected end of string

`;

exports[`toMatchJSON throws on invalid JSON 4`] = `
expect(string).toMatchJSON(expected)

string value must be a valid JSON.
Received:
  "falsr"
       ^
Unexpected token: r
`;

exports[`toMatchJSON throws on invalid JSON 5`] = `
expect(string).toMatchJSON(expected)

string value must be a valid JSON.
Received:
  "fals'"
       ^
Unexpected token: '
`;

exports[`toMatchJSON throws on invalid JSON 6`] = `
expect(string).toMatchJSON(expected)

string value must be a valid JSON.
Received:
  "fals9"
       ^
Unexpected number: 9
`;
